src/snapshots/tests__parse_function_multiple_arg_call.snap
---
source: src/parser.rs
expression: parsed
---
Ok(
    Program {
        id: Identifier(
            "fib",
        ),
        compound: Compound {
            statements: [
                Decl(
                    Decl {
                        id: Identifier(
                            "x",
                        ),
                        expr: Some(
                            Expr {
                                head: Unit(
                                    FunctionCall(
                                        FunctionCall {
                                            id: Identifier(
                                                "sum",
                                            ),
                                            args: [
                                                Expr {
                                                    head: Unit(
                                                        Identifier(
                                                            Identifier(
                                                                "x",
                                                            ),
                                                        ),
                                                    ),
                                                    tail: Some(
                                                        ExprPrime {
                                                            operator: Plus,
                                                            operand: Expr {
                                                                head: Unit(
                                                                    Identifier(
                                                                        Identifier(
                                                                            "y",
                                                                        ),
                                                                    ),
                                                                ),
                                                                tail: None,
                                                            },
                                                            tail: None,
                                                        },
                                                    ),
                                                },
                                                Expr {
                                                    head: Unit(
                                                        Identifier(
                                                            Identifier(
                                                                "y",
                                                            ),
                                                        ),
                                                    ),
                                                    tail: Some(
                                                        ExprPrime {
                                                            operator: Plus,
                                                            operand: Expr {
                                                                head: Unit(
                                                                    Identifier(
                                                                        Identifier(
                                                                            "x",
                                                                        ),
                                                                    ),
                                                                ),
                                                                tail: None,
                                                            },
                                                            tail: None,
                                                        },
                                                    ),
                                                },
                                            ],
                                        },
                                    ),
                                ),
                                tail: None,
                            },
                        ),
                    },
                ),
            ],
        },
    },
)
