src/snapshots/tests__parse_function_no_args.snap
---
source: src/parser.rs
expression: parsed
---
Ok(
    Program {
        id: Identifier(
            "fib",
        ),
        compound: Compound {
            statements: [
                FunctionDecl(
                    FunctionDecl {
                        id: Identifier(
                            "main",
                        ),
                        args: [],
                        inner: Compound {
                            statements: [
                                Return(
                                    Return {
                                        expr: Expr {
                                            head: Term {
                                                head: Factor {
                                                    head: Product {
                                                        head: Unit(
                                                            Int(
                                                                1,
                                                            ),
                                                        ),
                                                        tail: None,
                                                    },
                                                    tail: None,
                                                },
                                                tail: None,
                                            },
                                            tail: None,
                                        },
                                    },
                                ),
                            ],
                        },
                    },
                ),
            ],
        },
    },
)
