src/snapshots/tests__parse_function_single_arg.snap
---
source: src/parser.rs
expression: parsed
---
Ok(
    Program {
        id: Identifier(
            "fib",
        ),
        compound: Compound {
            statements: [
                FunctionDecl(
                    FunctionDecl {
                        id: Identifier(
                            "id",
                        ),
                        args: [
                            Identifier(
                                "x",
                            ),
                        ],
                        inner: Compound {
                            statements: [
                                Return(
                                    Return {
                                        expr: Expr {
                                            head: Term {
                                                head: Factor {
                                                    head: Product {
                                                        head: Unit(
                                                            Identifier(
                                                                Identifier(
                                                                    "x",
                                                                ),
                                                            ),
                                                        ),
                                                        tail: None,
                                                    },
                                                    tail: None,
                                                },
                                                tail: None,
                                            },
                                            tail: None,
                                        },
                                    },
                                ),
                            ],
                        },
                    },
                ),
            ],
        },
    },
)
