src/snapshots/tests__parse_function_single_arg_call.snap
---
source: src/parser.rs
expression: parsed
---
Ok(
    Program {
        id: Identifier(
            "fib",
        ),
        compound: Compound {
            statements: [
                Decl(
                    Decl {
                        id: Identifier(
                            "x",
                        ),
                        expr: Some(
                            Expr {
                                head: Unit(
                                    FunctionCall(
                                        FunctionCall {
                                            id: Identifier(
                                                "id",
                                            ),
                                            args: [
                                                Expr {
                                                    head: Unit(
                                                        Identifier(
                                                            Identifier(
                                                                "x",
                                                            ),
                                                        ),
                                                    ),
                                                    tail: None,
                                                },
                                            ],
                                        },
                                    ),
                                ),
                                tail: None,
                            },
                        ),
                    },
                ),
            ],
        },
    },
)
