src/snapshots/tests__parse_minimal_assignments.snap
---
source: src/parser.rs
expression: parsed
---
Node {
    ty: Program,
    text_range: 0..65,
    children: [
        Node {
            ty: Identifier,
            text_range: 8..11,
            children: [],
        },
        Node {
            ty: Compound,
            text_range: 12..65,
            children: [
                Node {
                    ty: Decl,
                    text_range: 18..35,
                    children: [
                        Node {
                            ty: Identifier,
                            text_range: 22..23,
                            children: [],
                        },
                        Node {
                            ty: Expr,
                            text_range: 27..34,
                            children: [
                                Node {
                                    ty: Term,
                                    text_range: 27..34,
                                    children: [
                                        Node {
                                            ty: Factor,
                                            text_range: 27..34,
                                            children: [
                                                Node {
                                                    ty: Product,
                                                    text_range: 27..34,
                                                    children: [
                                                        Node {
                                                            ty: Unit,
                                                            text_range: 27..34,
                                                            children: [
                                                                Node {
                                                                    ty: Str,
                                                                    text_range: 27..34,
                                                                    children: [],
                                                                },
                                                            ],
                                                        },
                                                    ],
                                                },
                                            ],
                                        },
                                    ],
                                },
                            ],
                        },
                    ],
                },
                Node {
                    ty: Decl,
                    text_range: 36..47,
                    children: [
                        Node {
                            ty: Identifier,
                            text_range: 40..41,
                            children: [],
                        },
                        Node {
                            ty: Expr,
                            text_range: 45..46,
                            children: [
                                Node {
                                    ty: Term,
                                    text_range: 45..46,
                                    children: [
                                        Node {
                                            ty: Factor,
                                            text_range: 45..46,
                                            children: [
                                                Node {
                                                    ty: Product,
                                                    text_range: 45..46,
                                                    children: [
                                                        Node {
                                                            ty: Unit,
                                                            text_range: 45..46,
                                                            children: [
                                                                Node {
                                                                    ty: Int(
                                                                        2,
                                                                    ),
                                                                    text_range: 45..46,
                                                                    children: [],
                                                                },
                                                            ],
                                                        },
                                                    ],
                                                },
                                            ],
                                        },
                                    ],
                                },
                            ],
                        },
                    ],
                },
                Node {
                    ty: Decl,
                    text_range: 48..61,
                    children: [
                        Node {
                            ty: Identifier,
                            text_range: 52..53,
                            children: [],
                        },
                        Node {
                            ty: Expr,
                            text_range: 57..60,
                            children: [
                                Node {
                                    ty: Term,
                                    text_range: 57..60,
                                    children: [
                                        Node {
                                            ty: Factor,
                                            text_range: 57..60,
                                            children: [
                                                Node {
                                                    ty: Product,
                                                    text_range: 57..60,
                                                    children: [
                                                        Node {
                                                            ty: Unit,
                                                            text_range: 57..60,
                                                            children: [
                                                                Node {
                                                                    ty: BracketedExpr,
                                                                    text_range: 57..60,
                                                                    children: [
                                                                        Node {
                                                                            ty: Expr,
                                                                            text_range: 58..59,
                                                                            children: [
                                                                                Node {
                                                                                    ty: Term,
                                                                                    text_range: 58..59,
                                                                                    children: [
                                                                                        Node {
                                                                                            ty: Factor,
                                                                                            text_range: 58..59,
                                                                                            children: [
                                                                                                Node {
                                                                                                    ty: Product,
                                                                                                    text_range: 58..59,
                                                                                                    children: [
                                                                                                        Node {
                                                                                                            ty: Unit,
                                                                                                            text_range: 58..59,
                                                                                                            children: [
                                                                                                                Node {
                                                                                                                    ty: Int(
                                                                                                                        2,
                                                                                                                    ),
                                                                                                                    text_range: 58..59,
                                                                                                                    children: [],
                                                                                                                },
                                                                                                            ],
                                                                                                        },
                                                                                                    ],
                                                                                                },
                                                                                            ],
                                                                                        },
                                                                                    ],
                                                                                },
                                                                            ],
                                                                        },
                                                                    ],
                                                                },
                                                            ],
                                                        },
                                                    ],
                                                },
                                            ],
                                        },
                                    ],
                                },
                            ],
                        },
                    ],
                },
            ],
        },
    ],
}
