src/snapshots/tests__parse_minimal_no_bool_no_expr.snap
---
source: src/parser.rs
expression: parsed
---
Ok(
    Program {
        id: Identifier(
            "fib",
        ),
        compound: Compound {
            statements: [
                Decl(
                    Decl {
                        id: Identifier(
                            "n",
                        ),
                        expr: None,
                    },
                ),
            ],
        },
    },
)
