src/snapshots/tests__parse_minimal_string_assign.snap
---
source: src/parser.rs
expression: parsed
---
Ok(
    Program {
        id: Identifier(
            "fib",
        ),
        compound: Compound {
            statements: [
                Decl(
                    Decl {
                        id: Identifier(
                            "n",
                        ),
                        expr: Some(
                            Expr {
                                head: Unit(
                                    String(
                                        "Hello",
                                    ),
                                ),
                                tail: None,
                            },
                        ),
                    },
                ),
            ],
        },
    },
)
